# plexget

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: gen_demo.py
docs/release-notes/: v0.1.0.md
docs/superpowers/plans/: 2026-07-02-plexget.md
docs/superpowers/specs/: 2026-07-02-plexget-design.md
packaging/: entry.py
plexget/: __main__.py  app.py  auth.py  demo.py  downloader.py  filtering.py  nodes.py  plex_client.py
tests/: fakes.py  test_app_nav.py  test_auth.py  test_demo.py  test_download_paths.py  test_downloader.py  test_filtering.py  test_main.py  test_nodes.py  test_plex_client.py  test_segmented.py  test_smoke.py
